--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -13,6 +13,8 @@ jobs:
     steps:     
     - name: Checkout project
       uses: actions/checkout@v2    
+      with:
+        fetch-depth: 0
     - name: Set up Java
       uses: actions/setup-java@v1
       with:
